--- a/eclipse/.project
+++ b/eclipse/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>WaterCraft2</name>
+	<name>WaterCraft</name>
 	<comment></comment>
 	<projects>
 	</projects>
