Fixed small oversight in build.xml

--- a/antconfig/build.xml
+++ b/antconfig/build.xml
@@ -37,6 +37,7 @@
 	<target name="replace_tokens">
 		<replace dir="${environment.mcp_location}/src/minecraft/${environment.main_package_path}" token="@GIT_SHA@" value="${repository.version}" />
 		<replace dir="${environment.mcp_location}/src/minecraft/${environment.main_package_path}" token="@VERSION@" value="${build.mod_version}" />
+		<replace file="${environment.mcp_location}/src/minecraft/mcmod.info" token="@VERSION@" value="${build.mod_version}" />
 	</target>
 
 	<target name="recompile">
